<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">CalcSMR</string>
    <string name="anterior_name">Ans</string>
    <string name="eq_symbol">=</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="AC_name">Reset</string>
    <string name="C_name">DEL</string>
    <string name="signed_symbol">+/–</string>
    <string name="plus_symbol">+</string>
    <string name="minus_symbol">—</string>
    <string name="product_symbol">x</string>
    <string name="division_symbol">÷</string>
    <string name="module_symbol">%</string>
    <string name="x2_symbol">x2</string>
    <string name="d2_symbol">÷2</string>
    <string name="x1024_symbol">x2¹°</string>
    <string name="d1024_symbol">÷2¹°</string>
</resources>